# Auriga

./: .gitignore  CMakeLists.txt  README.md  auriga.dia  auriga.xcf
conf/worker/: beowulf.worker.ini  cheng.auriga.ini  cheng.worker.ini  cinnamon.auriga.ini  cinnamon.worker.ini  clarabit.worker.ini  crafty.auriga.ini  crafty.worker.ini  critter.worker.ini  daydreamer.worker.ini  greko.worker.ini  redqueen.worker.ini  stockfish.auriga.ini  stockfish.worker.ini
site/: .gitignore  404.html  _command_area.php  all_perft.php  allperft.php  analyticstracking.php  anomaly.php  auriga  batch_update_stats.php  create_perft.php  download.php  downloadini.php  error_captcha.html  footer.html  generate_master_ini.php  index.php  insert_task.php  list_perft.php  menu.php  mysql_connect.php  perft.php  read_perft.php  search_fen.php  setTimezone.php  set_variable.php  task.php  updateStatistics.php
site/css/: css1.css  layout.css  navi.css
site/doc/: inside_auriga.php  worker.php
site/js/: cinnamon_engine_1_2b.js  validator.js
site/sql/: auriga.sql
sql/: auriga.sql
src/: GetOpt.h  GetOptMaster.h  GetOptTask.h  Makefile  cheng.auriga.ini  cinnamon.auriga.ini  compile.sh  crafty.auriga.ini  main.cpp  master.ini  master_generated.ini  nodes.ini  perft.php  stockfish.auriga.ini
src/blockingThreadPool/: ThreadPool.h
src/conf/engine/: cheng.auriga.ini  cinnamon.auriga.ini  crafty.auriga.ini  stockfish.auriga.ini
src/conf/nodes/: example1.ini  odroid.ini
src/conf/worker/: cheng.auriga.ini  cinnamon.auriga.ini  crafty.auriga.ini  stockfish.auriga.ini
src/engine/: Engine.cpp  Engine.h  ObserverEngine.h
src/lib/: WrapperCinnamon.h  zconf.h  zlib.h
src/namespaces/: debug.h  def.h
src/network/: Client.cpp  Client.h  Dns.h  Get.h  GetGZ.cpp  GetGZ.h  Iparser.h  Post.cpp  Post.h  ResolveHost.h  Server.cpp  Server.h
src/network/util/: Network.h
src/perft/: Message.cpp  Message.h  PerftClient.h  PerftDistributed.cpp  PerftDistributed.h  PerftParser.cpp  PerftParser.h  PerftResultCallback.cpp  PerftResultCallback.h  RemoteNode.cpp  RemoteNode.h
src/perft/master/: PerftSplitter.cpp  PerftSplitter.h  RemoteNode.cpp  RemoteNode.h
src/perft/node/: IResultCallback.h  Perft.cpp  Perft.h  PerftClient.h  PerftParser.cpp  PerftParser.h  PerftResultCallback.cpp  PerftResultCallback.h
src/perft/shared/: Message.cpp  Message.h  NodeEntity.h  NodeEntityDao.cpp  NodeEntityDao.h  PerftEntity.h  PerftEntityDao.cpp  PerftEntityDao.h  PerftTree.cpp  PerftTree.h  PerftTreeDao.cpp  PerftTreeDao.h  TaskEntity.h  TaskEntityDao.cpp  TaskEntityDao.h
src/perft/task/: HttpPost.cpp  HttpPost.h  Perft.cpp  Perft.h  TaskEntity.h  TaskEntityDao.cpp  TaskEntityDao.h
src/perft/worker/: WorkerEntity.h  WorkerEntityDao.cpp  WorkerEntityDao.h
src/pipe/: Engine.cpp  Engine.h  Ipipe.h  PipePosix.cpp  PipePosix.h  PipeWindows.cpp  PipeWindows.h
src/site/: create_perft.php  generate_master_ini.php  insert_task.php  list_perft.php
src/sql/: auriga.sql  dump.sh
src/threadPool/: Mutex.h  Thread.h  ThreadPool.h
src/util/: Bits.h  Compression.h  FileUtil.h  GetOpt.h  GetOptMaster.h  GetOptNode.h  GetOptTask.h  IniFile.cpp  IniFile.h  Random.h  Singleton.h  String.h  Time.h  UUID.h  logger.h
web_site/: 404.html  _downloadini.php  allperft.php  analyticstracking.php  anomaly.php  auriga  captcha.php  create_perft.php  download.php  error_personalcode.html  footer.html  generate_master_ini.php  index.php  insert_task.php  menu.php  mysql_connect.php  perft.php  search_fen.php  task.php
web_site/css/: css1.css  layout.css  navi.css
web_site/doc/: create_web_site.php  inside_auriga.php  worker.php
web_site/js/: cinnamon_engine_1_2b.js  validator.js
web_site/mysql/: auriga.sql
